[project]
name = "resume-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "rvishakhs",email = "rvishakhs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "transformers (>=4.50.1,<5.0.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "streamlit-extras (>=0.6.0,<0.7.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
